fix: :zap: solución multiple de errores y feature de subir fichero de autorización de práctica
