# apps/server/src/practices/service.rs
@@ -2,7 +2,7 @@ use crate::shared::services::event_queue::{Event, EventQueue};
 use async_trait::async_trait;
 
 use shaku::{Component, Interface};
-use std::sync::Arc;
+use std::{io::Bytes, sync::Arc};
 use uuid::Uuid;
 
 use crate::{
@@ -40,8 +40,9 @@ pub trait PracticeService: Interface {
         input: CreatePracticeDto,
     ) -> Result<Practice, AppError>;
 
-    async fn remove(&self, id: &Uuid) -> Result<(), AppError>;
+    async fn authorize(&self, practice_id: &Uuid, document: Bytes<&[u8]>) -> Result<(), AppError>;
 
+    async fn remove(&self, id: &Uuid) -> Result<(), AppError>;
     async fn approve(&self, enrollment_id: &Uuid, practice_id: &Uuid) -> AppResult<Practice>;
 }
 
@@ -91,12 +92,31 @@ impl PracticeService for PracticeServiceImpl {
 
         let (course, teacher) = self.courses.get_by_id(&enrollment.course_id).await?;
 
-        let event_data = (student, practice.clone(), course, teacher);
+        let event_data = (student, enrollment, practice.clone(), course, teacher);
 
         self.event_queue.publish(Event::PracticeApproved(event_data)).await;
 
         practice.is_approved = true;
         self.practices.save(practice).await
+    }
+
+    async fn authorize(&self, practice_id: &Uuid, doc: Bytes<&[u8]>) -> Result<(), AppError> {
+        let practice = self
+            .practices
+            .find_by_id(practice_id)
+            .await?
+            .ok_or(AppError::ResourceNotFound(*practice_id))?;
+
+        let bytes: Vec<u8> = doc
+            .into_iter()
+            .collect::<Result<Vec<u8>, std::io::Error>>()
+            .map_err(|e| AppError::InternalServerError(e.into()))?;
+
+        let event_data = (practice, bytes);
+
+        self.event_queue.publish(Event::PracticeAuthorized(event_data)).await;
+
+        Ok(())
     }
 
     async fn update(&self, id: &Uuid, input: UpdatePracticeDto) -> Result<Practice, AppError> {
